[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/FuelBar.gd" type="Script" id=1]
[ext_resource path="res://interface/fuel_bar/fuelbar-over.png" type="Texture" id=2]
[ext_resource path="res://interface/fuel_bar/fuelbar-back.png" type="Texture" id=3]
[ext_resource path="res://interface/fuel_bar/fuelbar-progress.png" type="Texture" id=4]

[node name="FuelBar" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FuelUnder" type="TextureProgress" parent="."]
margin_right = 40.0
margin_bottom = 40.0
value = 100.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 4 )
tint_progress = Color( 0.0392157, 0.741176, 0.984314, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FuelOver" type="TextureProgress" parent="."]
margin_right = 40.0
margin_bottom = 40.0
value = 100.0
texture_over = ExtResource( 2 )
texture_progress = ExtResource( 4 )
tint_progress = Color( 0.0392157, 0.341176, 0.984314, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpdateTween" type="Tween" parent="."]
